--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #1fd1f9;
+  background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app {
+    text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+    opacity: 1;
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    background-image: linear-gradient(360deg, #feae96 0%, #fe0944 74%);
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #000;
+}
+textarea {
+    width: 80%;
+    max-width: 450px;
+    height: 150px;
+    margin-top: 18px;
+    padding: 5px;
+    color: #1a1d22;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    font-size: 1rem;
+    border-style: none solid solid none;
+    border-width: medium 3px 3px medium;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+    font-size: 24px;
+    font-weight: 600;
+    color: transparent;
+    opacity: 1;
+    line-height: 50px;
+    margin-bottom: 10px;
+    background-clip: text;
+    background-image: linear-gradient(360deg, #feae96 0%, #fe0944 74%);
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #000;
+}
+ 
+p span{
+  border:  2px solid #000;
+  border-radius: 10px;
+  background-color: #fff;
+  padding: 2px 10px;
+  color: #000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.red{
+  border:  2px solid #000;
+  border-radius: 10px;
+  background-color: #fff;
+  padding: 2px 10px;
+  color: #fe0944;
+}
+
+
+button {
+    font-size: 1rem;
+    padding: .5em 2em;
+    font-weight: bold;
+    border: 1px solid #000;
+    border-radius: 5px;
+    color: #1e3c72;
+    cursor: pointer;
+    background-color: #52a7c1;
+    background-image: linear-gradient(315deg, #52a7c1 0%, #b3f6d8 74%);
+
+}
+
+textarea:disabled {
+    background: #1a1d22;
+     border-style: none solid solid none;
+     border-width: medium 0px 1px medium;
+     box-shadow: 0 0px 0px 1px rgb(246, 245, 245) inset ;
+}
+
+button:disabled {
+    background: rgb(112, 111, 111);
+    cursor: not-allowed;
 }
